# GKSVM

./: CMakeLists.txt  GKSVM.remote.cmake  README.md  otb-module.cmake
include/: gksvm.h  otbChangeProfileKernelFunctor.h  otbGKSVMModel.h  otbGKSVMModel.txx  otbMixturePolyRBFKernelFunctor.h  otbNonGaussianRBFKernelFunctor.h  otbSVMKernels.h  otbSpectralAngleKernelFunctor.h
src/: CMakeLists.txt  gksvm.cpp
test/: CMakeLists.txt  otbGK-SVMLearningTestDriver.cxx  otbGKSVMModelCopyComposedKernelTest.cxx  otbGKSVMModelCopyGenericKernelTest.cxx  otbGKSVMModelCopyTest.cxx  otbGKSVMModelGenericKernelLoadSave.cxx  otbGKSVMModelGenericKernelsTest.cxx  otbGKSVMTestDriver.cxx  otbSVMClassifierImage.cxx
